# e2e-pcc-platformv2

./: .env.example  .gitignore  PHASE1_COMPLETE.md  README.md  docker-compose.app.yml  docker-compose.infra.yml  main.py  pyproject.toml  requirements-ai.txt  requirements-api.txt  requirements-base.txt
archives/: pharmacy_output.txt
config/: otel-collector-config.yml
docs/: architecture.md  healthcare_ai_platform.md  healthcare_platform_implementation_plan.md  healthcare_platform_step_by_step_guide.md
docs/impl/: phase-1-data-pipeline.md  phase-2-foundation.md  phase-3-mcp-servers.md  phase-4-agents.md  phase-5-orchestration.md  phase-6-discharge-observability.md  phase-7-docker-e2e.md
guidelines/: NICE_NG203_Anaemia.txt  NICE_NG28_Diabetes.txt  WHO_Anaemia_Protocol.txt  registry.md
prompts/: specification-to-implementation-guide.md
scripts/: run_data_pipeline.py  test_openai_key.py  verify_environment.py
tests/integration/: test_data_quality.py  test_sql_queries.py
vector_store/: download_guidelines.py  load_chromadb.py  verify_guidelines.py
